--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
     <section class="top-section">
         <div class="helf-width">
             <h1>WELLCOME To</h1>
-            <h1><span>MAHIAN CHOWDHURY</span>EARTH !</h1>
+            <h1><span>GHOST CODER</span> EARTH !</h1>
             <h3>full stuck Devoloper Begener</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, officia. Ipsam iste rem repellendus esse eveniet blanditiis molestiae consectetur animi ex voluptatem. Minima doloremque sit beatae cumque natus necessitatibus voluptas consequatur. Ea, ad odio! Repellat illum magni repudiandae maxime distinctio?</p>
-            <a href=""></a>
+            <a target="_blank" href="https://www.linkedin.com/in/mahian-chowdhury-94a170181/">HIRE ME NOW</a>
+        </div>
+        <div class="helf-width">
+            <img src="img/images/jhankar.png" alt="jhankar.png">
+        </div>
+    </section>
+    <section class="middel-section">
+        <div class="helf-width">
+            <img src="img/images/jhankar2.png" alt="jhankar.png">
+        </div>
+        <div class="helf-width">
+            <h1>WELLCOME To</h1>
+            <h1><span>GHOST CODER</span> EARTH !</h1>
+            <h3>full stuck Devoloper Begener</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, officia. Ipsam iste rem repellendus esse eveniet blanditiis molestiae consectetur animi ex voluptatem. Minima doloremque sit beatae cumque natus necessitatibus voluptas consequatur. Ea, ad odio! Repellat illum magni repudiandae maxime distinctio?</p>
+            <a target="_blank" href="https://www.linkedin.com/in/mahian-chowdhury-94a170181/">HIRE ME NOW</a>
         </div>
     </section>
 </body>
