--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-section">
+    <section class="top-section flecibal-container">
         <div class="helf-width">
             <h1>WELLCOME To</h1>
             <h1><span>GHOST CODER</span> EARTH !</h1>
@@ -21,7 +21,7 @@
             <img src="img/images/jhankar.png" alt="jhankar.png">
         </div>
     </section>
-    <section class="middel-section">
+    <section class="middel-section flecibal-container">
         <div class="helf-width">
             <img src="img/images/jhankar2.png" alt="jhankar.png">
         </div>
@@ -31,6 +31,17 @@
             <h3>full stuck Devoloper Begener</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, officia. Ipsam iste rem repellendus esse eveniet blanditiis molestiae consectetur animi ex voluptatem. Minima doloremque sit beatae cumque natus necessitatibus voluptas consequatur. Ea, ad odio! Repellat illum magni repudiandae maxime distinctio?</p>
             <a target="_blank" href="https://www.linkedin.com/in/mahian-chowdhury-94a170181/">HIRE ME NOW</a>
+        </div>
+    </section>
+    <section class="experiens">
+        <h1>Experiments</h1>
+        <div id="full-stuck" class="helf-width">
+            <h1>Full-stuck Devoloper</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quam nihil est quibusdam. Ipsum, tenetur maiores odit tempore vitae sit.</p>
+        </div>
+        <div id="full-stuck" class="helf-width">
+            <h1>Baby Devoloper</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ea, fugit quaerat corrupti voluptate quibusdam dicta accusantium quae eveniet culpa!</p>
         </div>
     </section>
 </body>
