--- a/index.html
+++ b/index.html
@@ -30,18 +30,22 @@
             <h1><span>GHOST CODER</span> EARTH !</h1>
             <h3>full stuck Devoloper Begener</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, officia. Ipsam iste rem repellendus esse eveniet blanditiis molestiae consectetur animi ex voluptatem. Minima doloremque sit beatae cumque natus necessitatibus voluptas consequatur. Ea, ad odio! Repellat illum magni repudiandae maxime distinctio?</p>
-            <a target="_blank" href="https://www.linkedin.com/in/mahian-chowdhury-94a170181/">HIRE ME NOW</a>
+            <a target="_blank" href="https://www.linkedin.com/in/mahian-chowdhury-94a170181/">DOWNLOAD RESUME</a>
         </div>
     </section>
     <section class="experiens">
-        <h1>Experiments</h1>
-        <div id="full-stuck" class="helf-width">
-            <h1>Full-stuck Devoloper</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quam nihil est quibusdam. Ipsum, tenetur maiores odit tempore vitae sit.</p>
-        </div>
-        <div id="full-stuck" class="helf-width">
-            <h1>Baby Devoloper</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ea, fugit quaerat corrupti voluptate quibusdam dicta accusantium quae eveniet culpa!</p>
+        <h1 class="experiens-h1">Experiments</h1>
+        <div class="experiend-section">
+            <div class="experiens-div">
+                <h1>Full-stuck web Devoloper</h1>
+                <h3>2021-Present web devoloper</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet illum ipsam tenetur laboriosam quia, labore perspiciatis, numquam sed ducimus vel veritatis quisquam. Impedit aspernatur ea aliquid reprehenderit dolores qui distinctio sint voluptas. Nostrum facere expedita laborum sit officiis, voluptates non debitis tenetur libero, magnam repellat dolores perferendis saepe veritatis quo?</p>
+            </div>
+            <div class="experiens-div">
+                <h1>Baby Devoloper</h1>
+                <h3>2021-2024 HERO LEARNER Devoloper</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit quasi obcaecati laborum delectus ratione adipisci labore esse similique laudantium, praesentium architecto vel iure, officiis voluptatum repellat. Nihil debitis repellat, reprehenderit delectus facere explicabo numquam quos! Iure, nihil culpa! Reprehenderit dignissimos perspiciatis magni quisquam ratione incidunt, sit rem saepe ipsam!</p>
+            </div>
         </div>
     </section>
 </body>
