--- a/index.html
+++ b/index.html
@@ -36,17 +36,20 @@
     <section class="experiens">
         <h1 class="experiens-h1">Experiments</h1>
         <div class="experiend-section">
-            <div class="experiens-div">
-                <h1>Full-stuck web Devoloper</h1>
-                <h3>2021-Present web devoloper</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet illum ipsam tenetur laboriosam quia, labore perspiciatis, numquam sed ducimus vel veritatis quisquam. Impedit aspernatur ea aliquid reprehenderit dolores qui distinctio sint voluptas. Nostrum facere expedita laborum sit officiis, voluptates non debitis tenetur libero, magnam repellat dolores perferendis saepe veritatis quo?</p>
+            <div id="pro-div" class="experiens-div">
+                <h2>Full-stuck web Devoloper</h2>
+                <h3 class="xp-h3">2021-Present web devoloper</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel quibusdam, maiores et ut esse quaerat fugit! Quibusdam molestiae pariatur dolore eveniet dicta culpa illum maxime nulla accusamus, architecto ratione, esse, consectetur autem ducimus provident. Quo, et iusto nesciunt, dolor sint minima molestiae culpa ad, non praesentium laborum corporis. In provident quod ut non velit ullam modi consequuntur adipisci nostrum fugit.</p>
             </div>
-            <div class="experiens-div">
-                <h1>Baby Devoloper</h1>
-                <h3>2021-2024 HERO LEARNER Devoloper</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit quasi obcaecati laborum delectus ratione adipisci labore esse similique laudantium, praesentium architecto vel iure, officiis voluptatum repellat. Nihil debitis repellat, reprehenderit delectus facere explicabo numquam quos! Iure, nihil culpa! Reprehenderit dignissimos perspiciatis magni quisquam ratione incidunt, sit rem saepe ipsam!</p>
+            <div id="baby-div" class="experiens-div">
+                <h2>Baby Devoloper</h2>
+                <h3 class="xp-h3">2021-2024 HERO LEARNER Devoloper</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A sit aliquam optio assumenda non! Corporis suscipit alias, nemo et eos praesentium voluptas molestias ratione voluptate at dolor. Quibusdam eum officia iusto distinctio possimus tenetur dolor omnis repellendus mollitia, vitae asperiores in! Repellendus ullam neque cumque natus unde at eum accusamus sit ab. Enim, modi? Totam necessitatibus excepturi facilis maiores unde.</p>
             </div>
         </div>
     </section>
+    <footer>
+        <p class="copy">@copyright mahian</p>
+    </footer>
 </body>
 </html>
